cmake_minimum_required(VERSION 3.9.6)
project(tobii_jni_demo)
include_directories("/C/Program Files/Java/default/include")
include_directories("/C/Program Files/Java/default/include/win32")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../tobii_jni")
link_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../src/main/resources/lib/tobii/x64")
link_directories("${CMAKE_CURRENT_SOURCE_DIR}/../tobii_jni")
link_libraries(tobii_stream_engine tobii_jni_stream_engine)
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
add_executable(tobii_jni_demo tobii_jni_demo.cpp)
